readme.txt added, routes/auth.js added, views/auth/login.hbs & signup.hbs added, style.css.map added, style.css added | userSchema created, first draft for signup added

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,3 +1,5 @@
 <h1>{{title}}</h1>
 <p>Get insides about your carbon footprint and understand saving potential</p>
+<a href="/auth/login">Login</a>
+<a href="/auth/signup">Sign Up</a>
 
