database connected and users are created after signup, bcrypt installed

--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -8,7 +8,7 @@
 
   <label for="password">Password</label>
   {{! change type to "password" to make the entered password invisible}}
-  <input type="password" name="text" placeholder="create a password"/>
+  <input type="password" name="password" placeholder="create a password"/>
 
   <button type="submit">SignUp</button>
 
