--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -2,3 +2,23 @@
 
 <h1>This represents the login page</h1>
 
+<form action="/auth/login" method="POST">
+  <div>
+    <label for="email">Email:</label>
+    <input type="text" name="email">
+  </div>
+  <div>
+    <label for="password">Password:</label>
+    <input type="password" name="password">
+  </div>
+
+  {{#if message}}
+    <div class="error-message">{{ message }}</div>
+  {{/if}}
+
+  <div>
+    <input type="submit" value="Log In">
+  </div>
+</form>
+
+
