--- a/views/userpage/userpage.hbs
+++ b/views/userpage/userpage.hbs
@@ -2,7 +2,7 @@
 
 
 
-<form action="/userpage" method="POST">
+<form action="/searchresults" method="POST">
   <div>
     <label for="pointA">PointA:</label>
     <input type="text" name="pointA">
