--- a/views/userpage/userpage.hbs
+++ b/views/userpage/userpage.hbs
@@ -1,19 +1,17 @@
 <h1>this represents the userpage</h1>
 
 
-
-<form action="/searchresults" method="POST">
+{{!-- changed action ="/searchresults" to ="/searchresults/add" --}}
+<form action="/searchresults/" method="POST">
   <div>
     <label for="pointA">PointA:</label>
     <input type="text" name="pointA">
-
   </div>
   <div>
     <label for="pointB">PointB:</label>
     <input type="text" name="pointB">
   </div>
-  <button type="submit">Search</button>
-
+  <button type="submit">Add</button>
 </form>
 
 
