--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,7 +2,10 @@ body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif; }
 
+h1 {
+  color: red; }
+
 a {
-  color: #00B7FF; }
+  color: #00b7ff; }
 
 /*# sourceMappingURL=style.css.map */
