--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -1,8 +1,11 @@
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  // background-image: ;
 }
-
+h1 {
+  color: red;
+}
 a {
-  color: #00B7FF;
+  color: #00b7ff;
 }
