--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,7 +1,16 @@
-<h1>{{title}}</h1>
-<p>Get insides about your carbon footprint and understand saving potential</p>
-<a href="/auth/login">Login</a>
-<a href="/auth/signup">Sign Up</a>
+<h1 id="mainpage">{{title}}</h1>
+
+<div class="topnav">
+ <a href="/auth/login">Login</a>
+ <a href="/auth/signup">Sign Up</a>
+</div>
+
+<div class="background">
+  <p id="mainparagraph">Get insides about your carbon footprint while traveling</p>
+  <a id="getstarted"href="auth/signup.hbs">Get Started</a>
+</div>
+
+
 
 
 
