--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -1,23 +1,23 @@
 {{!-- added 24.04. --}}
 
-<h1>This represents the signup page</h1>
+<h1 id="authtext">Create an account to become a clever traveler</h1>
 {{!-- action defines where it will get sended to --}}
-<form id="form" action="/auth/signup" method="POST">
-  <label for="email">Email</label/>
-  <input id="email" type="text" name="email" placeholder="enter your email adress here"/>
+<form id="authform" action="/auth/signup" method="POST">
+  <label for="email"></label/>
+  <input id="email" type="text" name="email" placeholder="Email..."/>
 
-  <label for="password">Password</label>
+  <label for="password"></label>
   {{! change type to "password" to make the entered password invisible}}
-  <input id="password" type="password" name="password" placeholder="create a password"/>
+  <input id="password" type="password" name="password" placeholder="Password..."/>
 
   {{#if message}}
     <div class="error-message">{{ message }}</div>
   {{/if}}
   <br><br>
 
-  <button type="submit">Create Account</button>
+  <button type="submit">Get Started</button>
 
-  <p class="account-message">
+  <p id="authtext"class="account-message">
     Do you already have an account?
     <a href="/auth/login">Login here</a>
   </p>
