complete logic + route displayed PS: on userpage.js i uncomennted post request that was breaking the code

--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -1,7 +1,8 @@
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-  // background-image: ;
+  // background-image: url("/images/white-airliner-wing-on-top-of-sea-clouds-2007401.jpg");
+  // background-size: 100%;
 }
 h1 {
   color: red;
