css adjusted main page

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,14 +1,46 @@
 <h1 id="mainpage">{{title}}</h1>
 
-<div class="topnav">
- <a href="/auth/login">Login</a>
- <a href="/auth/signup">Sign Up</a>
-</div>
+<nav>
+  <p class="navtitle">Travel Clever</p>
+    <div class="navauth">
+      <a href="/auth/login">Login</a>
+      <a href="/auth/signup">Sign Up</a>
+    </div>
+</nav>
 
-<div class="background">
-  <p id="mainparagraph">Get insides about your carbon footprint while traveling</p>
-  <a id="getstarted"href="auth/signup.hbs">Get Started</a>
+<header>
+  <div class="background">
+      <h2 id="mainparagraph">See insides about your carbon footprint while traveling</h2><br>
+      <a id="getstarted"href="auth/signup">Get Started</a><br>
+  </div>
+</header>
+
+<div class="usp_overview">
+      <div>
+        <h2>Did you know?</h2>
+      </div>
+        <div class="usp">
+          <div>
+              <img class = "image_usp" src="" alt="transport-icon">
+              <h4>Huge Transport Industry</h4>
+              <p>Transport and especially flights are the second biggest sector for CO2 emissions</p>
+          </div>
+          <div>
+              <img class = "image_usp" src="/images/goal.png" alt="goal-icon">
+              <h4>Two Tonne Goal</h4>
+              <p>According to: We need to reduce our total CO2 consumption to 2 tonnes by the year 2050</p>
+          </div>
+          <div>
+              <img class = "image_usp" src="" alt="everybody-icon">
+              <h4>Everybody can make an impact</h4>
+              <p>Choose your destinations wisely and re-think your way of transport</p>
+          </div>
+        </div>  
+      </div>
 </div>
+  
+
+<div class="footer">
 
 
 
