complete logic + route displayed PS: on userpage.js i uncomennted post request that was breaking the code

--- a/views/userpage/saved-routes.hbs
+++ b/views/userpage/saved-routes.hbs
@@ -1,3 +1,12 @@
-{{#each data}}
-<div>{{this.pointA}}</div>
+{{#each result}}
+
+<div>{{this.pointA}} - {{this.pointB}}</div>
+<div>{{this.distance}}</div>
+<div>{{this.CO2}}</div>
+<div>{{this.nitrousOxideCO2e}}</div>
+<div>{{this.methaneCO2e}}</div>
+<div>{{this.totalDirectCO2e}}</div>
+<div>{{this.indirectCo2e}}</div>
+<div>{{this.lifecycleCo2}}</div>
+
 {{/each }}
