nav bar added to userpage

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -38,6 +38,23 @@
         </div>  
       </div>
 </div>
+
+<div class ="bike">
+  <div class="textbike">
+    <ul>
+      <li>
+        <p>Drive Bike - Make an impact</p><a href="/bike/addroute">Get more Infos</a>
+      </li> 
+    </ul>
+  </div>
+  <div class ="picturelist">
+    <ul>
+      <li>Bild</li>
+    </ul>
+
+  </div>
+
+</div>
   
 
 <div class="footer">
