--- a/views/userpage/saved-routes.hbs
+++ b/views/userpage/saved-routes.hbs
@@ -1,3 +1,12 @@
+<nav>
+  <p class="navtitle">Travel Clever</p>
+    <div class="navauth">
+      <a href="/">Logout</a>
+      <a href="/userpage">+ Add Routes</a>
+    </div>
+</nav>
+
+
 {{#each result}}
 
 <div>{{this.pointA}} - {{this.pointB}}</div>
