--- a/views/userpage/searchresults.hbs
+++ b/views/userpage/searchresults.hbs
@@ -1,3 +1,11 @@
+<nav>
+  <p class="navtitle">Travel Clever</p>
+    <div class="navauth">
+      <a href="/">Logout</a>
+      <a href="/saved-routes">My saved Routes</a>
+    </div>
+</nav>
+
 <div class="resultsTable">
   <h1 id="points">{{departure}} - {{destination}} </h1>
   {{#each results}}
