--- a/views/userpage/userpage.hbs
+++ b/views/userpage/userpage.hbs
@@ -1,5 +1,12 @@
 <h1>this represents the userpage</h1>
 
+<nav>
+  <p class="navtitle">Travel Clever</p>
+    <div class="navauth">
+      <a href="/">Logout</a>
+      <a href="/saved-routes">My saved Routes</a>
+    </div>
+</nav>
 
 {{!-- changed action ="/searchresults" to ="/searchresults/add" --}}
 <form action="/searchresults/" method="POST">
