--- a/views/bike/addroute.hbs
+++ b/views/bike/addroute.hbs
@@ -1,4 +1,4 @@
-<p>helllo</p>
+{{!-- <p>helllo</p>
 
 <form id="authform" action="/bike/addroute" method="POST">
   <div>
@@ -6,4 +6,4 @@
     <input type="text" name="bikekilometer">
   </div>
   <button type="submit">Add</button>
-</form>
+</form> --}}
