user profile routing working perfectly

--- a/views/userpage/saved-routes.hbs
+++ b/views/userpage/saved-routes.hbs
@@ -1,12 +1,12 @@
 <nav>
   <p class="navtitle">Travel Clever</p>
-    <div class="navauth">
-      <a href="/">Logout</a>
-      <a href="/userpage">+ Add Routes</a>
-    </div>
+  <div class="navauth">
+    <a href="/auth/logout">Logout</a>
+    <a href="/auth/userpage">+ Add Routes</a>
+  </div>
 </nav>
 
-
+banana
 {{#each result}}
 
 <div>{{this.pointA}} - {{this.pointB}}</div>
