--- a/views/userpage/userpage.hbs
+++ b/views/userpage/userpage.hbs
@@ -3,7 +3,7 @@
 <nav>
   <p class="navtitle">Travel Clever</p>
     <div class="navauth">
-      <a href="/">Logout</a>
+      <a href="/auth/logout">Logout</a>
       <a href="/saved-routes">My saved Routes</a>
     </div>
 </nav>
@@ -25,6 +25,6 @@
 
 {{#if user}}
 <div>
-  <a href="/">Logout</a>
+  <a href="/auth/logout">Logout</a>
 </div>
 {{/if}}
