--- a/views/userpage/searchresults.hbs
+++ b/views/userpage/searchresults.hbs
@@ -8,7 +8,9 @@
   {{/each}}
 </div>
 
+
 <button class="waddup">Save this route </button>
+<a href="/saved-routes"><button class="toSavedRoutes">TO MY SAVED ROUTES</button></a>
 <h1 class="changeMe">change here</h1>
 
 
