--- a/views/userpage/userpage.hbs
+++ b/views/userpage/userpage.hbs
@@ -14,6 +14,9 @@
   <button type="submit">Add</button>
 </form>
 
+<a href="/saved-routes">
+  <button class="toSavedRoutes">TO MY SAVED ROUTES</button>
+</a>
 
 
 {{#if user}}
