--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -4,8 +4,9 @@
 <head>
   <script src="https://cdn.jsdelivr.net/npm/es6-promise@4/dist/es6-promise.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/es6-promise@4/dist/es6-promise.auto.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-
+  <link rel="stylesheet" type="text/css" href="path/to/chartjs/dist/Chart.min.css">
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
