--- a/views/userpage/searchresults.hbs
+++ b/views/userpage/searchresults.hbs
@@ -67,7 +67,6 @@
       const value = Math.round(parseFloat(string[1]))
       route[key] = value
     })
-    console.log("What a surprise, smth is working ")
     axios.post("/saved-routes", route).then(response => {
       console.log('waddup');
       document.querySelector(".changeMe").innerText = 'changed after reponse';
@@ -80,7 +79,47 @@
 </script>
 
 
-</br>
+
+<canvas id="myChart" width="400" height="400"></canvas>
+<script src="path/to/chartjs/dist/Chart.js"></script>
+<script>
+  var ctx = document.getElementById('myChart').getContext('2d');
+  var myChart = new Chart(ctx, {
+    type: 'bar',
+    data: {
+      labels: ['Red', 'Blue', 'Yellow', 'Green'],
+      datasets: [{
+        label: 'C02',
+        data: [1, 2, 3, 4],
+        backgroundColor: [
+          'rgba(255, 99, 132, 0.2)',
+          'rgba(54, 162, 235, 0.2)',
+          'rgba(255, 206, 86, 0.2)',
+          'rgba(75, 192, 192, 0.2)',
+
+        ],
+        borderColor: [
+          'rgba(255, 99, 132, 1)',
+          'rgba(54, 162, 235, 1)',
+          'rgba(255, 206, 86, 1)',
+          'rgba(75, 192, 192, 1)',
+
+        ],
+        borderWidth: 1
+      }]
+    },
+    options: {
+      scales: {
+        yAxes: [{
+          ticks: {
+            beginAtZero: true
+          }
+        }]
+      }
+    }
+  });
+</script>
+
 
 
 
