--- a/views/index.hbs
+++ b/views/index.hbs
@@ -21,7 +21,7 @@
       </div>
         <div class="usp">
           <div>
-              <img class = "image_usp" src="" alt="transport-icon">
+              <img class = "image_usp" src="/images/Transport-Airplane-Take-Off-icon.png" alt="transport-icon">
               <h4>Huge Transport Industry</h4>
               <p>Transport and especially flights are the second biggest sector for CO2 emissions</p>
           </div>
@@ -31,7 +31,7 @@
               <p>According to: We need to reduce our total CO2 consumption to 2 tonnes by the year 2050</p>
           </div>
           <div>
-              <img class = "image_usp" src="" alt="everybody-icon">
+              <img class = "image_usp" src="/images/footprint_38309.png" alt="everybody-icon">
               <h4>Everybody can make an impact</h4>
               <p>Choose your destinations wisely and re-think your way of transport</p>
           </div>
