--- a/views/userpage/searchresults.hbs
+++ b/views/userpage/searchresults.hbs
@@ -16,8 +16,9 @@
   <div class="co2results">
     <div class="keys">{{this.type}}: {{this.value}} {{this.unit}} </div>
   </div>
-
   {{/each}}
+
+
 </div>
 
 
@@ -66,6 +67,7 @@
       console.log(key)
       const value = Math.round(parseFloat(string[1]))
       route[key] = value
+      console.log("HALLLLOOOOOO", route)
     })
     axios.post("/saved-routes", route).then(response => {
       console.log('waddup');
@@ -77,49 +79,6 @@
   }
 
 </script>
-
-
-
-<canvas id="myChart" width="400" height="400"></canvas>
-<script src="path/to/chartjs/dist/Chart.js"></script>
-<script>
-  var ctx = document.getElementById('myChart').getContext('2d');
-  var myChart = new Chart(ctx, {
-    type: 'bar',
-    data: {
-      labels: ['Red', 'Blue', 'Yellow', 'Green'],
-      datasets: [{
-        label: 'C02',
-        data: [1, 2, 3, 4],
-        backgroundColor: [
-          'rgba(255, 99, 132, 0.2)',
-          'rgba(54, 162, 235, 0.2)',
-          'rgba(255, 206, 86, 0.2)',
-          'rgba(75, 192, 192, 0.2)',
-
-        ],
-        borderColor: [
-          'rgba(255, 99, 132, 1)',
-          'rgba(54, 162, 235, 1)',
-          'rgba(255, 206, 86, 1)',
-          'rgba(75, 192, 192, 1)',
-
-        ],
-        borderWidth: 1
-      }]
-    },
-    options: {
-      scales: {
-        yAxes: [{
-          ticks: {
-            beginAtZero: true
-          }
-        }]
-      }
-    }
-  });
-</script>
-
 
 
 
