--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -31,7 +31,7 @@ body {
 
 // Add a color to the active/current link
 .navauth a.active {
-  background-color: #4CAF50;
+  background-color: #4caf50;
   color: white;
 }
 
@@ -44,14 +44,14 @@ body {
   height: 50vw;
   display: flex;
   justify-content: center;
-	align-items: center;
+  align-items: center;
 }
 
 .background p {
   color: white;
   font-size: 1.2em;
   width: 50%;
-  text-align: center  
+  text-align: center;
 }
 
 .background a {
@@ -65,7 +65,7 @@ body {
   padding: 8px 16px;
   text-decoration: none;
   text-transform: uppercase;
-  transition: .3s ease background;
+  transition: 0.3s ease background;
   width: 15%;
 }
 
@@ -94,7 +94,6 @@ body {
   justify-content: center;
   align-items: center;
   margin: 50px;
-  
 }
 
 .usp h4 {
@@ -102,9 +101,8 @@ body {
 }
 
 .usp p {
-  color: 1A1A1A;
+  color: 1a1a1a;
 }
-
 
 // Auth Pages start here
 
@@ -119,7 +117,7 @@ body {
   margin: 30px auto;
   width: 380px;
 }
- 
+
 #authform label {
   color: #666;
   display: inline-block;
@@ -127,7 +125,7 @@ body {
   text-align: center;
   width: 100%;
 }
- 
+
 #authform input,
 #authform button {
   box-sizing: border-box;
@@ -137,7 +135,7 @@ body {
   width: 100%;
   margin-bottom: 20px;
 }
- 
+
 #authform button {
   background: #3f6e7b;
   border: 1px solid #3f6e7b;
@@ -149,23 +147,26 @@ body {
   padding: 8px 16px;
   text-decoration: none;
   text-transform: uppercase;
-  transition: .3s ease background;
+  transition: 0.3s ease background;
   width: 100%;
 }
- 
+
 #authform button:hover {
   background: #fff;
   color: #43a3e6;
-  transition: .3s ease background;
+  transition: 0.3s ease background;
 }
 
 #searchform {
   float: right;
 }
 
-
-
-
+.layout {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
 
 // //bike
 
