--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -125,8 +125,30 @@ body {
   color: #43a3e6;
   transition: 0.3s ease background; }
 
-#searchform {
-  float: right; }
+.searchfield {
+  padding: 30vh 10vw;
+  box-sizing: border-box;
+  text-align: center; }
+
+#startpoint {
+  color: #666;
+  display: inline-block;
+  margin-bottom: 10px;
+  text-align: center;
+  width: 100%; }
+
+#endpoint {
+  box-sizing: border-box;
+  font-size: 14px;
+  outline: 0;
+  padding: 4px;
+  width: 100%;
+  margin-bottom: 20px; }
+
+.rightside {
+  padding: 30vh 10vw;
+  box-sizing: border-box;
+  text-align: center; }
 
 .layout {
   display: flex;
