--- a/views/userpage/saved-routes.hbs
+++ b/views/userpage/saved-routes.hbs
@@ -19,10 +19,11 @@
       <span><b>NitrousOxideCO2: </b> {{  this.nitrousOxideCO2e}} kg</span>
       <span><b>MethaneCO2e: </b> {{  this.methaneCO2e}} kg</span>
       <span><b>TotalDirectCO2e: </b> {{  this.totalDirectCO2e}} kg</span>
-
+      <span><b>IndirectCO2e: </b> {{  this.indirectCO2e}} kg</span>
+      <span><b>LifeCycleCO2e: </b> {{  this.lifeCycleCO2e}} kg</span>
     </div>
 
-    <a href="/saved-routes/delete/{{_id}}"><button>Delete</button></a>
+    <a href="/saved-routes/delete/{{_id}}"><button class="mainbtn" class="srbtn">Delete</button></a>
 
   </div>
   {{/each }}
