--- a/views/userpage/userpage.hbs
+++ b/views/userpage/userpage.hbs
@@ -11,17 +11,17 @@
 <div class="userpage">
 
   <h2>Flight Carbon Footprint Calculator</h2>
-  <div>
+  <div class="searchformdeparturedestination">
     <form id="searchform" action="/searchresults/" method="POST">
       <span>
-        <label id="startpoint" for="pointA">Departure</label>
+        <label id="startpoint" for="pointA">Departure: </label>
         <input type="text" name="pointA" placeholder="add your departure here...">
       </span>
       <span>
-        <label id="endpoint" for="pointB">Destination</label>
+        <label id="endpoint" for="pointB">Destination:</label>
         <input type="text" name="pointB" placeholder="add your destination here...">
       </span>
-      <button id="addtoroutes" type="submit">See Results</button>
+      <button class="mainbtn" id="addtoroutes" type="submit">See Results</button>
     </form>
   </div>
 
