--- a/views/userpage/searchresults.hbs
+++ b/views/userpage/searchresults.hbs
@@ -10,23 +10,25 @@
 </nav>
 
 <div class="layout">
-  <div class="rightside">
+  <div class="singleRoute">
     {{#if user}}
     <div class="resultsTable">
       <h1 class="points"> {{departure}} - {{destination}} </h1>
-      {{#each results}}
+
       <div class="co2results">
-        <div class="keys">{{this.type}}: {{this.value}} {{this.unit}} </div>
+        {{#each results}}
+        <div class="keys">{{this.type}}: {{this.value}} {{this.unit}}</div>
+        {{/each}}
       </div>
-      {{/each}}
+
       <button class="waddup">Save this route </button>
     </div>
   </div>
 
   <div class="searchfield">
-    <button class="waddup">Save this route </button>
-    <a href="/saved-routes"><button class="toSavedRoutes">TO MY SAVED ROUTES</button></a>
-    <h1 class="changeMe">change here</h1>
+    {{!-- <button class="waddup">Save this route </button> --}}
+    <a href="/saved-routes"></a>
+    <h1 class="changeMe">Search Again</h1>
 
     <form action="/searchresults" method="POST">
       <div>
@@ -37,7 +39,7 @@
         <label for="pointB">PointB:</label>
         <input class="pointB" type="text" name="pointB">
       </div>
-      <button type="submit">New search</button>
+      <button class="mainbtn" type="submit">New search</button>
     </form>
   </div>
 </div>
