--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,8 +1,7 @@
-<h1 id="mainpage">{{title}}</h1>
-
 <nav>
-  <p class="navtitle">Travel Clever</p>
+  
     <div class="navauth">
+      <img class= "navlogo" src= "/images/logo5.png" alt="travelclever-logo">
       <a href="/auth/login">Login</a>
       <a href="/auth/signup">Sign Up</a>
     </div>
@@ -10,14 +9,18 @@
 
 <header>
   <div class="background">
-      <h2 id="mainparagraph">See insides about your carbon footprint while traveling</h2><br>
-      <a id="getstarted"href="auth/signup">Get Started</a><br>
+    <div>
+      <h1 id="mainparagraph">See insides about your carbon footprint while traveling</h1></br>
+    </div>  
+    <div>
+      <a id="getstarted"href="auth/signup">Get Started</a></br>
+    </div>
   </div>
 </header>
 
 <div class="usp_overview">
       <div>
-        <h2>Did you know?</h2>
+        <h1>Did you know?</h1>
       </div>
         <div class="usp">
           <div>
@@ -39,25 +42,11 @@
       </div>
 </div>
 
-<div class ="bike">
-  <div class="textbike">
-    <ul>
-      <li>
-        <p>Drive Bike - Make an impact</p><a href="/bike/addroute">Get more Infos</a>
-      </li> 
-    </ul>
-  </div>
-  <div class ="picturelist">
-    <ul>
-      <li>Bild</li>
-    </ul>
-
-  </div>
-
-</div>
   
 
 <div class="footer">
+  <h1>copyright by travel clever</h1>
+</div>
 
 
 
