--- a/views/userpage/saved-routes.hbs
+++ b/views/userpage/saved-routes.hbs
@@ -1,6 +1,6 @@
 <nav>
-  <p class="navtitle">Travel Clever</p>
   <div class="navauth">
+    <img class= "navlogo" src= "/images/logo5.png" alt="travelclever-logo">
     <a href="/auth/logout">Logout</a>
     <a href="/auth/userpage">+ Add Routes</a>
   </div>
