--- a/views/userpage/searchresults.hbs
+++ b/views/userpage/searchresults.hbs
@@ -1,7 +1,7 @@
 <nav>
-  <p class="navtitle">Travel Clever</p>
   <div class="navauth">
     {{#if user}}
+    <img class= "navlogo" src= "/images/logo5.png" alt="travelclever-logo">
     <a href="/auth/logout">Logout</a>
 
     <a href="/saved-routes">My saved Routes</a>
@@ -9,7 +9,7 @@
   </div>
 </nav>
 
-<div class="layout">
+<div class="layout2">
   <div class="rightside">
     {{#if user}}
       <div class="resultsTable">
