--- a/views/userpage/userpage.hbs
+++ b/views/userpage/userpage.hbs
@@ -1,8 +1,8 @@
 {{!-- <h1>this represents the userpage</h1> --}}
 
 <nav>
-  <p class="navtitle">Travel Clever</p>
   <div class="navauth">
+    <img class= "navlogo" src= "/images/logo5.png" alt="travelclever-logo">
     <a href="/auth/logout">Logout</a>
     <a href="/saved-routes">My saved Routes</a>
   </div>
@@ -33,3 +33,9 @@
   <a href="/auth/logout">Logout</a>
 </div>
 {{/if}} --}}
+
+<div="footer">
+  <ul>
+    <li></li>
+  </ul>
+</div>
